--- a/css/main.css
+++ b/css/main.css
@@ -317,24 +317,28 @@ img {
 .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .header__container {
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
   outline: 2px solid red;
   outline-offset: -2px;
 }
-@media (min-width: 450px) {
+@media screen and (min-width: 480px) {
   .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .header__container {
     width: 450px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
-@media (min-width: 738px) {
+@media screen and (min-width: 768px) {
   .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .header__container {
     width: 738px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
-@media (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .header__container {
     width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -1312,14 +1316,11 @@ textarea.labelfield {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  gap: 30px;
 }
 .doing__item {
   width: 370px;
-  margin-right: 30px;
   position: relative;
-}
-.doing__item:nth-child(3n) {
-  margin-right: 0px;
 }
 .doing__position {
   display: -webkit-box;
@@ -1358,13 +1359,22 @@ textarea.labelfield {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  gap: 30px;
 }
-.feature__item {
-  width: 270px;
-  margin-right: 30px;
+@media screen and (min-width: 480px) {
+  .feature__item {
+    width: 450px;
+  }
 }
-.feature__item:nth-child(4n) {
-  margin-right: 0px;
+@media screen and (min-width: 768px) {
+  .feature__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature__item {
+    width: 270px;
+  }
 }
 .feature__subtitle {
   color: var(--title-text-color);
@@ -1389,11 +1399,25 @@ textarea.labelfield {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 270px;
   height: 120px;
   background-color: var(--bgc);
   border-radius: 4px;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 480px) {
+  .feature__icon {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .feature__icon {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature__icon {
+    width: 270px;
+  }
 }
 .feature__svg {
   width: 70px;
