--- a/sass/components/_doing.scss
+++ b/sass/components/_doing.scss
@@ -9,18 +9,19 @@
     @extend %list;
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
   }
   &__title {
     @extend %title;
   }
   &__item {
     width: 370px;
-    margin-right: 30px;
+    // margin-right: 30px;
     position: relative;
   }
-  &__item:nth-child(3n) {
-    margin-right: 0px;
-  }
+  // &__item:nth-child(3n) {
+  //   margin-right: 0px;
+  // }
 
   &__position {
     display: flex;
