--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -17,14 +17,28 @@
     @extend %list;
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
+    // width: 354px;
   }
   &__item {
-    width: 270px;
-    margin-right: 30px;
+    // width: 270px;
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    }
+    // margin-right: 30px;
   }
-  &__item:nth-child(4n) {
-    margin-right: 0px;
-  }
+  // &__item:nth-child(4n) {
+  //   margin-right: 0px;
+  // }
 
   &__subtitle {
     color: var(--title-text-color);
@@ -46,8 +60,21 @@
     justify-content: center;
     align-items: center;
 
-    width: 270px;
+    // width: 270px;
     height: 120px;
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    }
+
     background-color: var(--bgc);
 
     border-radius: 4px;
