--- a/sass/utils/_placeholder.scss
+++ b/sass/utils/_placeholder.scss
@@ -35,20 +35,26 @@
 %container {
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  // padding-left: 15px;
+  // padding-right: 15px;
   outline: 2px solid red;
   outline-offset: -2px;
 
-  @media (min-width: 450px) {
+  @media screen and (min-width: 480px) {
     width: 450px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
-  @media (min-width: 738px) {
+  @media screen and (min-width: 768px) {
     width: 738px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
-  @media (min-width: 1200px) {
+  @media screen and (min-width: 1200px) {
     width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
