--- a/css/main.css
+++ b/css/main.css
@@ -1223,18 +1223,15 @@ textarea.labelfield {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  gap: 30px;
 }
 
 .cards {
   width: 270px;
-  margin-right: 30px;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
-}
-.cards:nth-child(4n) {
-  margin-right: 0px;
 }
 .cards__text {
   padding-top: 30px;
@@ -1309,7 +1306,11 @@ textarea.labelfield {
   background: var(--accent-color);
 }
 
-/* what we do */
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .doing {
+    display: none;
+  }
+}
 .doing__list {
   display: -webkit-box;
   display: -ms-flexbox;
