--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -15,20 +15,23 @@
     @extend %list;
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
   }
 }
 
 .cards {
   width: 270px;
-  margin-right: 30px;
+
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
 
-  &:nth-child(4n) {
-    margin-right: 0px;
-  }
+  // margin-right: 30px;
+  // &:nth-child(4n) {
+  //   margin-right: 0px;
+  // }
+
   &__text {
     padding-top: 30px;
     padding-bottom: 30px;
