--- a/css/main.css
+++ b/css/main.css
@@ -905,6 +905,14 @@ textarea.labelfield {
 }
 
 /* Постійні клієнти  */
+.clients {
+  -webkit-transition-property: border, color, fill;
+  transition-property: border, color, fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 .clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -915,6 +923,8 @@ textarea.labelfield {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 30px;
 }
 .clients__icon {
@@ -930,17 +940,25 @@ textarea.labelfield {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 170px;
-  height: 92px;
+  padding: 16px 32px;
   border-radius: 4px;
   border: 1px solid #afb1b8;
   color: var(--fill-default-icon);
-  -webkit-transition-property: border, color, fill;
-  transition-property: border, color, fill;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .clients__link {
+    width: 210px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .clients__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    width: 170px;
+  }
 }
 .clients__link:hover, .clients__link:focus {
   border: 1px solid var(--accent-color);
@@ -1232,6 +1250,36 @@ textarea.labelfield {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
+}
+@media screen and (min-width: 480px) {
+  .cards {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .cards {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cards {
+    width: 270px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .cards__portrait {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .cards__portrait {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cards__portrait {
+    width: 270px;
+  }
 }
 .cards__text {
   padding-top: 30px;
