--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -26,7 +26,31 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
 
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
+
+  &__portrait {
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    }
+  }
   // margin-right: 30px;
   // &:nth-child(4n) {
   //   margin-right: 0px;
