--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -98,4 +98,22 @@
   cursor: pointer;
 
   padding: 10px 28px;
+
+  // @media screen and (min-width: 480px) {
+  //   display: block;
+  //   text-align: center;
+  //   margin: 0;
+  // }
+
+  // @media screen and (min-width: 768px) {
+  //   display: flex;
+  //   text-align: center;
+  //   justify-content: center;
+  //   margin: 0;
+  // }
+
+  // @media screen and (min-width: 1200px) {
+  //   display: inline;
+  //   text-align: left;
+  // }
 }
