--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -296,7 +296,8 @@
       // margin-bottom: 20px;
       margin: 0;
       width: 450px;
-      padding: 15px 387px 15px 16px;
+      padding: 13px 16px;
+      text-align: start;
     }
 
     @media screen and (min-width: 768px) {
@@ -305,15 +306,16 @@
       justify-content: center;
       // margin-bottom: 20px;
       width: 450px;
-      padding: 15px 387px 15px 16px;
+      padding: 13px 16px;
+      text-align: start;
     }
 
     @media screen and (min-width: 1200px) {
       display: block;
-      text-align: left;
+      text-align: start;
       margin-right: 12px;
       width: 358px;
-      padding: 15px 295px 15px 16px;
+      padding: 13px 16px;
     }
   }
 }
