--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -22,8 +22,6 @@
 }
 
 .modal {
-  min-height: 581px;
-  min-width: 528px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -37,11 +35,23 @@
 
   transform: scale(1) translate(-50%, -50%);
   transition: transorm 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 480px) {
+    min-height: 609px;
+    min-width: 450px;
+  }
+  @media screen and (min-width: 768px) {
+    min-height: 609px;
+    min-width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    min-height: 581px;
+    min-width: 528px;
+  }
 }
 
 textarea {
   resize: none;
-  width: 448px;
+
   height: 120px;
   padding: 12px 16px;
   line-height: 1.17;
@@ -56,15 +66,23 @@ textarea::placeholder {
 }
 
 .formbackdrop {
-  width: 448px;
   height: 342px;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 480px) {
+    width: 370px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 370px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
 }
 .title-form {
   display: flex;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 1.15;
   text-align: center;
   justify-content: center;
   letter-spacing: 0.03em;
@@ -104,10 +122,18 @@ textarea::placeholder {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 textarea.labelfield {
-  width: 448px;
   height: 120px;
   margin-bottom: 20px;
   padding: 12px 16px;
+  @media screen and (min-width: 480px) {
+    width: 370px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 370px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
 }
 
 /* КНОПКА ЧЕК */
