--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,10 +1,44 @@
 /* Шапка сайта */
 .header {
   border-bottom: 1px solid #ececec;
+
+  &__nav {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+
   &__container {
     @extend %container;
   }
+
+  // &__mobilebutton &__icon-cross {
+  //   display: none;
+  // }
+  // &__mobilebutton.js-open-menu &__icon-cross {
+  //   display: block;
+  // }
+  // &__mobilebutton.js-open-menu &__icon-menu {
+  //   display: none;
+  // }
 }
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+
+  background-color: palegoldenrod;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+  &.js-menu-container {
+    display: block;
+  }
+}
+
 .nav {
   display: flex;
   align-items: center;
@@ -16,7 +50,10 @@
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
-
+  @media screen and (max-width: 767px) {
+    margin-right: 276px;
+    font-size: 24px;
+  }
   &--header {
     color: #000000;
   }
@@ -25,18 +62,14 @@
   }
 }
 
-/* Main Nav */
-.header__nav {
-  display: flex;
-  align-items: center;
-}
-
 /* Site nav */
 .menu {
   @extend %list;
   display: flex;
   margin-left: 93px;
-
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
   &__item:nth-child(n + 1) {
     margin-right: 50px;
   }
@@ -83,9 +116,9 @@
   display: flex;
   margin-left: auto;
 
-  // @media screen and (min-width: 480px) {
-  //   display: none;
-  // }
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
   @media screen and (min-width: 768px) {
     flex-wrap: wrap;
