--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -161,3 +161,24 @@
     fill: currentColor;
   }
 }
+@media screen and (min-width: 768px) {
+  .navcontacts__icon--envelope {
+    width: 14px;
+    height: 10px;
+  }
+  .navcontacts__icon--smartphone {
+    width: 10px;
+    height: 14px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navcontacts__icon--envelope {
+    width: 16px;
+    height: 12px;
+  }
+  .navcontacts__icon--smartphone {
+    width: 10px;
+    height: 16px;
+  }
+}
