--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ img {
   overflow: hidden;
 }
 
-.feature__list, .doing__list, .cards__sociallinks, .team__list, .footer__sociallinks, .footer__list, .portfolios, .clients__list, .portfolio__buttons, .navcontacts, .menu {
+.feature__list, .doing__list, .cards__sociallinks, .team__list, .footer__sociallinks, .footer__list, .portfolios, .clients__list, .mobile-media-list, .navcontacts__mobile, .portfolio__buttons, .navcontacts, .menu {
   list-style: none; /* убирает оформление списка*/
   padding: 0;
   margin: 0;
@@ -314,29 +314,29 @@ img {
   margin-top: 0;
 }
 
-.feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .header__container {
+.hero__container, .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .mobile-menu, .header__container {
   margin-left: auto;
   margin-right: auto;
   outline: 2px solid red;
   outline-offset: -2px;
 }
 @media screen and (min-width: 480px) {
-  .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .header__container {
-    width: 450px;
+  .hero__container, .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .mobile-menu, .header__container {
+    max-width: 450px;
     padding-left: 0;
     padding-right: 0;
   }
 }
 @media screen and (min-width: 768px) {
-  .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .header__container {
-    width: 738px;
+  .hero__container, .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .mobile-menu, .header__container {
+    max-width: 738px;
     padding-left: 0;
     padding-right: 0;
   }
 }
 @media screen and (min-width: 1200px) {
-  .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .header__container {
-    width: 1200px;
+  .hero__container, .feature__container, .doing__container, .team__container, .footer__container, .portfolio__container, .clients__container, .mobile-menu, .header__container {
+    max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -403,6 +403,11 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (max-width: 767px) {
+  .nav {
+    padding: 10px 0 10px 0;
+  }
+}
 
 .logo {
   color: var(--accent-color);
@@ -463,15 +468,17 @@ body {
 .menu__link--current {
   color: var(--accent-color);
 }
-.menu__link--current:after {
-  position: absolute;
-  display: block;
-  content: "";
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  bottom: -1px;
-  background-color: var(--accent-color);
+@media screen and (min-width: 768px) {
+  .menu__link--current:after {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    bottom: -1px;
+    background-color: var(--accent-color);
+  }
 }
 
 .navcontacts {
@@ -533,6 +540,14 @@ body {
   fill: currentColor;
 }
 
+@media screen and (max-width: 767px) {
+  .navcontacts__icon--envelope {
+    display: none;
+  }
+  .navcontacts__icon--smartphone {
+    display: none;
+  }
+}
 @media screen and (min-width: 768px) {
   .navcontacts__icon--envelope {
     width: 14px;
@@ -562,12 +577,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   width: 40px;
   height: 40px;
   padding: 0;
@@ -580,6 +589,24 @@ body {
   .header__mobilebutton {
     display: none;
   }
+}
+
+.header__mobilebutton:hover .header__icon-menu,
+.header__mobilebutton:focus .header__icon-menu {
+  fill: #2196f3;
+}
+
+.header__mobilebutton.js-close-menu {
+  margin: 10px 15px;
+}
+
+.mobile-menu__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .hero__button {
@@ -728,7 +755,102 @@ body {
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-  overflow: visibility;
+  overflow: visible;
+}
+
+.mobile-menu {
+  position: relative;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0;
+  height: inherit;
+  width: 100%;
+  background-color: #fff;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  -webkit-transition: -webkit-transform var(--anim-fast) 100ms;
+  transition: -webkit-transform var(--anim-fast) 100ms;
+  transition: transform var(--anim-fast) 100ms;
+  transition: transform var(--anim-fast) 100ms, -webkit-transform var(--anim-fast) 100ms;
+}
+.is-hidden .mobile-menu {
+  -webkit-transform: scale(1) translate(-50%, -50%);
+          transform: scale(1) translate(-50%, -50%);
+  -webkit-transition: transorm 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transorm 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile__menu {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  gap: 32px;
+  margin: 0 0 302px 0;
+}
+
+.navcontacts__mobile {
+  padding: 0 0 0 40px;
+  gap: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 64px;
+}
+.navcontacts__mobile .navcontacts__link--envelope {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+.navcontacts__mobile .navcontacts__link--smartphone {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.166;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mobile-media-list {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  padding: 0 0 0 40px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mobile-media-item {
+  position: relative;
+}
+
+.mobile-media-link:not(:first-child)::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -10px;
+  width: 1px;
+  height: 22px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 /* Когда модалка спрятана к ней применяем: */
@@ -1924,4 +2046,11 @@ textarea.labelfield {
   width: 696px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.61;
+    max-width: 360px;
+  }
 }/*# sourceMappingURL=main.css.map */
