--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -14,9 +14,91 @@
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-  overflow: visibility;
+  overflow: visible;
+  // visibility
 }
 
+// For mobile
+.mobile-menu {
+  @extend %container;
+  position: relative;
+  background: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+    0px 1px 3px rgba(0, 0, 0, 0.16);
+
+  display: flex;
+  flex-direction: column;
+
+  margin: 0;
+  height: inherit;
+  width: 100%;
+
+  background-color: #fff;
+
+  transform: translateX(0);
+  transition: transform var(--anim-fast) 100ms;
+
+  .is-hidden & {
+    transform: scale(1) translate(-50%, -50%);
+    transition: transorm 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+.mobile__menu {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  gap: 32px;
+  margin: 0 0 302px 0;
+}
+.navcontacts__mobile {
+  padding: 0 0 0 40px;
+  @extend %list;
+  gap: 32px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 64px;
+  .navcontacts__link--envelope {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #2196f3;
+  }
+  .navcontacts__link--smartphone {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.166;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+}
+.mobile-media-list {
+  position: relative;
+  @extend %list;
+  display: flex;
+  gap: 20px;
+  padding: 0 0 0 40px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+.mobile-media-item {
+  position: relative;
+}
+.mobile-media-link:not(:first-child)::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -10px;
+  width: 1px;
+  height: 22px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  // transform: rotate(90deg);
+}
 /* Когда модалка спрятана к ней применяем: */
 .backdrop.is-hidden .modal {
   transform: scale(0.9) translate(-50%, -50%);
