--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -5,8 +5,8 @@
 
 .header__mobilebutton {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  // align-items: center;
+  // justify-content: center;
   width: 40px;
   height: 40px;
   padding: 0;
@@ -14,9 +14,21 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+
   @media screen and (min-width: 768px) {
     display: none;
   }
+}
+.header__mobilebutton:hover .header__icon-menu,
+.header__mobilebutton:focus .header__icon-menu {
+  fill: #2196f3;
+}
+.header__mobilebutton.js-close-menu {
+  margin: 10px 15px;
+}
+.mobile-menu__button {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .hero__button {
