--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -11,16 +11,6 @@
   &__container {
     @extend %container;
   }
-
-  // &__mobilebutton &__icon-cross {
-  //   display: none;
-  // }
-  // &__mobilebutton.js-open-menu &__icon-cross {
-  //   display: block;
-  // }
-  // &__mobilebutton.js-open-menu &__icon-menu {
-  //   display: none;
-  // }
 }
 
 .menu-container {
@@ -42,6 +32,9 @@
 .nav {
   display: flex;
   align-items: center;
+  @media screen and (max-width: 767px) {
+    padding: 10px 0 10px 0;
+  }
 }
 .logo {
   color: var(--accent-color);
@@ -100,14 +93,16 @@
   }
 
   &__link--current:after {
-    position: absolute;
-    display: block;
-    content: '';
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    bottom: -1px;
-    background-color: var(--accent-color);
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      display: block;
+      content: '';
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      bottom: -1px;
+      background-color: var(--accent-color);
+    }
   }
 }
 
@@ -159,6 +154,15 @@
 
   &__icon {
     fill: currentColor;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .navcontacts__icon--envelope {
+    display: none;
+  }
+  .navcontacts__icon--smartphone {
+    display: none;
   }
 }
 @media screen and (min-width: 768px) {
