--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -19,6 +19,10 @@
   padding-top: 200px;
   padding-bottom: 200px;
 
+  &__container {
+    @extend %container;
+  }
+
   &__title {
     color: var(--hero-text-color);
     font-weight: 900;
@@ -31,5 +35,11 @@
     width: 696px;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+      font-size: 26px;
+      line-height: 1.61;
+      max-width: 360px;
+    }
   }
 }
