--- a/sass/utils/_placeholder.scss
+++ b/sass/utils/_placeholder.scss
@@ -41,19 +41,19 @@
   outline-offset: -2px;
 
   @media screen and (min-width: 480px) {
-    width: 450px;
+    max-width: 450px;
     padding-left: 0;
     padding-right: 0;
   }
 
   @media screen and (min-width: 768px) {
-    width: 738px;
+    max-width: 738px;
     padding-left: 0;
     padding-right: 0;
   }
 
   @media screen and (min-width: 1200px) {
-    width: 1200px;
+    max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
   }
